syntax = "proto3";

package gonest;

option go_package = "gonest";

import "itsHim.proto";
import "hello.proto";
import "ack.proto";
import "chat.proto";
import "iplist.proto";
import "humanvote.proto";
import "werewolfvote.proto";
import "witch.proto";
import "cupid.proto";
import "hunter.proto";
import "clairvoyant.proto";
import "leaderelection.proto";
import "roledistribution.proto";

enum MessageType {
    ITSHIM           = 0;
    ACK              = 1;
    CHAT             = 2;
    IPLIST           = 3;
    HUMANVOTE        = 4;
    WEREWOLFVOTE     = 5;
    WITCH            = 6;
    CUPID            = 7;
    HUNTER           = 8;
    CLAIRVOYANT      = 9;
    HELLO            = 10;
    LEADERELECTION   = 11;
    ROLEDISTRIBUTION = 12;
}

message Event {
    MessageType messageType = 1;
    oneof body {
        AckMessage              ackMessage              = 3;
        ItsHimMessage           itsHimMessage           = 2;
        ChatMessage             chatMessage             = 4;
        IpListMessage           ipListMessage           = 5;
        HumanVoteMessage        humanVoteMessage        = 6;
        WerewolfVoteMessage     werwolfVoteMessage      = 7;
        WitchMessage            witchMessage            = 8;
        CupidMessage            cupidMessage            = 9;
        HunterMessage           hunterMessage           = 10;
        ClairvoyantMessage      clairvoyantMessage      = 11;
        HelloMessage            helloMessage            = 13;
        LeaderElectionMessage   leaderElectionMessage   = 14;
        RoleDistributionMessage roleDistributionMessage = 15;
    }
    string source = 12;
}